Remove logs, fix the flexbox, add invisible link to admin

--- a/app/_directives/home/home.component.css
+++ b/app/_directives/home/home.component.css
@@ -20,6 +20,7 @@
 }
 
 .home__ideas__teasers {
+  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 1.2em;
